--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@ $('#main .lazy').lazyload();
 
 <!-- need ta3dell in css -->
      <picture>
-  <source srcset="css/images/logo23.webp" type="image/webp">
-  <source srcset="css/images/logo23.jp2" type="image/jp2"> 
-  <img src="css/images/logo23.jpg" alt="">
+  <source srcset="images/logo23.webp" type="image/webp">
+  <source srcset="images/logo23.jp2" type="image/jp2"> 
+  <img src="images/logo23.jpg" alt="">
 </picture>
 
 
