--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@ $('#main .lazy').lazyload();
         <div class="row no-gutters">
             <div class="col-3 scal3">
           	               <picture >
-  <source srcset="css/images/drip/kinto.webp" type="image/webp">
-  <source srcset="css/images/drip/kinto.jp2" type="image/jp2" > 
-  <img src="css/images/drip/kinto.jpg" alt="" class="img-fluid">
+  <source srcset="images/drip/kinto.webp" type="image/webp">
+  <source srcset="images/drip/kinto.jp2" type="image/jp2" > 
+  <img src="images/drip/kinto.jpg" alt="" class="img-fluid">
 </picture>
 
 
@@ -186,9 +186,9 @@ $('#main .lazy').lazyload();
           <div class="row no-gutters ">
             <div class="col-3  scal3 ">
             	               <picture>
-  <source srcset="css/images/drip/V.webp" type="image/webp">
-  <source srcset="css/images/drip/V.jp2" type="image/jp2"> 
-  <img src="css/images/drip/V.jpg" alt="" class="img-fluid">
+  <source srcset="images/drip/V.webp" type="image/webp">
+  <source srcset="images/drip/V.jp2" type="image/jp2"> 
+  <img src="images/drip/V.jpg" alt="" class="img-fluid">
 </picture>
        
             </div>
@@ -221,9 +221,9 @@ $('#main .lazy').lazyload();
         <div class="row no-gutters">
            <div class="col-3  scal3 ">
            	   <picture>
-  <source srcset="css/images/drip/kim.webp" type="image/webp">
-  <source srcset="css/images/drip/kim.jp2" type="image/jp2"> 
-  <img src="css/images/drip/kim.jpg" alt="" class="img-fluid">
+  <source srcset="images/drip/kim.webp" type="image/webp">
+  <source srcset="images/drip/kim.jp2" type="image/jp2"> 
+  <img src="images/drip/kim.jpg" alt="" class="img-fluid">
 </picture>
           
             </div>
