--- a/index.html
+++ b/index.html
@@ -382,8 +382,8 @@ $('#main .lazy').lazyload();
 
             <div class="col-3 scal3">
          <picture>
-  <source srcset="images/hot/kap.webp" type="image/webp">
-  <source srcset="images/hot/kap.jp2" type="image/jp2"> 
+  <source srcset="images/hot/esp.webp" type="image/webp">
+  <source srcset="images/hot/esp.jp2" type="image/jp2"> 
   <img src="images/hot/kap.jpg" alt="" class="img-fluid lazy" alt="" loading="lazy">
 </picture>
           
