--- a/index.html
+++ b/index.html
@@ -382,9 +382,9 @@ $('#main .lazy').lazyload();
 
             <div class="col-3 scal3">
          <picture>
-  <source srcset="images/hot/esp.webp" type="image/webp">
-  <source srcset="images/hot/esp.jp2" type="image/jp2"> 
-  <img src="images/hot/kap.jpg" alt="" class="img-fluid lazy" alt="" loading="lazy">
+  <source srcset="images/esp.webp" type="image/webp">
+  <source srcset="images/esp.jp2" type="image/jp2"> 
+  <img src="images/esp.jpg" alt="" class="img-fluid lazy" alt="" loading="lazy">
 </picture>
           
             </div>
@@ -555,9 +555,9 @@ $('#main .lazy').lazyload();
 
             <div class="col-3">
             	    <picture>
-  <source srcset="images/hot/esp.webp" type="image/webp">
-  <source srcset="images/hot/esp.jp2" type="image/jp2"> 
-  <img src="images/hot/esp.jpg" alt="" class="img-fluid lazy" alt="" loading="lazy">
+  <source srcset="images/esp.webp" type="image/webp">
+  <source srcset="images/esp.jp2" type="image/jp2"> 
+  <img src="images/esp.jpg" alt="" class="img-fluid lazy" alt="" loading="lazy">
 </picture>
             </div>
 
