--- a/deet.html
+++ b/deet.html
@@ -47,7 +47,11 @@
 
 <script>
 
-   switch(localStorage.getItem("storageName")) {
+ 
+var loc=localStorage.getItem("storageName");
+
+ 
+   switch(loc) {
 
     case "hi":
 
