--- a/deet.html
+++ b/deet.html
@@ -47,31 +47,140 @@
 
 <script>
 
- 
 var loc=localStorage.getItem("storageName");
 
+ 
+   switch(loc) {
 
-   if(loc=="hi"){
+    case "ki":
+
    document.getElementById("myImage").src = "images/drip/kinto.jpg";
    document.getElementById("title").innerHTML = "كينتو";
    document.getElementById("kal").innerHTML = "7";
    document.getElementById("price").innerHTML = "15.00";
-   }
+   break;
 
-   else if(loc=="vii"){
+   case "vii":
 
    document.getElementById("myImage").src = "images/drip/v.jpg";
    document.getElementById("title").innerHTML = "ڤي 60";
    document.getElementById("kal").innerHTML = "7";
    document.getElementById("price").innerHTML = "15.00";
+   break;
+
+   case "kmm":
+
+   document.getElementById("myImage").src = "images/drip/kim.jpg";
+   document.getElementById("title").innerHTML = "كيميكس";
+   document.getElementById("kal").innerHTML = "7";
+   document.getElementById("price").innerHTML = "15.00";
+   break;
+  
+
+   case "laa":
+
+   document.getElementById("myImage").src = "images/hot/lat.jpg";
+   document.getElementById("title").innerHTML = "كيميكس";
+   document.getElementById("kal").innerHTML = "7";
+   document.getElementById("price").innerHTML = "15.00";
+   break;
+   
+
+ case "spp":
+
+   document.getElementById("myImage").src = "images/hot/lat.jpg";
+   document.getElementById("title").innerHTML = "كيميكس";
+   document.getElementById("kal").innerHTML = "7";
+   document.getElementById("price").innerHTML = "15.00";
+   break;
+  
+
+ case "koo":
+
+   document.getElementById("myImage").src = "images/hot/kor.jpg";
+   document.getElementById("title").innerHTML = "كيميكس";
+   document.getElementById("kal").innerHTML = "7";
+   document.getElementById("price").innerHTML = "15.00";
+   break;
 
 
+ case "kaa":
+
+   document.getElementById("myImage").src = "images/hot/kap.jpg";
+   document.getElementById("title").innerHTML = "كيميكس";
+   document.getElementById("kal").innerHTML = "7";
+   document.getElementById("price").innerHTML = "15.00";
+   break;
+
+
+ case "zaa":
+
+   document.getElementById("myImage").src = "images/hot/zen.jpg";
+   document.getElementById("title").innerHTML = "كيميكس";
+   document.getElementById("kal").innerHTML = "7";
+   document.getElementById("price").innerHTML = "15.00";
+   break;
+
+
+ case "kll":
+
+   document.getElementById("myImage").src = "images/hot/kal.jpg";
+   document.getElementById("title").innerHTML = "كيميكس";
+   document.getElementById("kal").innerHTML = "7";
+   document.getElementById("price").innerHTML = "15.00";
+   break;
+
+
+ case "hoo":
+
+   document.getElementById("myImage").src = "images/hot/cho.jpg";
+   document.getElementById("title").innerHTML = "كيميكس";
+   document.getElementById("kal").innerHTML = "7";
+   document.getElementById("price").innerHTML = "15.00";
+   break;
+
+
+ case "fll":
+
+   document.getElementById("myImage").src = "images/hot/flat.jpg";
+   document.getElementById("title").innerHTML = "كيميكس";
+   document.getElementById("kal").innerHTML = "7";
+   document.getElementById("price").innerHTML = "15.00";
+   break;
+
+
+ case "ess":
+
+   document.getElementById("myImage").src = "images/hot/esp.jpg";
+   document.getElementById("title").innerHTML = "كيميكس";
+   document.getElementById("kal").innerHTML = "7";
+   document.getElementById("price").innerHTML = "15.00";
+   break;
+
+
+ case "amm":
+
+   document.getElementById("myImage").src = "images/hot/esp.jpg";
+   document.getElementById("title").innerHTML = "كيميكس";
+   document.getElementById("kal").innerHTML = "7";
+   document.getElementById("price").innerHTML = "15.00";
+   break;
+
+
+ case "ymm":
+
+   document.getElementById("myImage").src = "images/hot/esp.jpg";
+   document.getElementById("title").innerHTML = "كيميكس";
+   document.getElementById("kal").innerHTML = "7";
+   document.getElementById("price").innerHTML = "15.00";
+   break;
 
 
    }
 
 
-   }
+
+
 
 </script>
 
@@ -86,4 +195,5 @@ function goBack() {
 
 </body>
 </html>
+
 
