--- a/deet.html
+++ b/deet.html
@@ -54,7 +54,7 @@ var loc=localStorage.getItem("storageName");
 
     case "ki":
 
-   document.getElementById("myImage").src = "images/drip/kinto.jpg";
+   document.getElementById("myImage").src = "images/drip/kinto.webp";
    document.getElementById("title").innerHTML = "كينتو";
    document.getElementById("kal").innerHTML = "7";
    document.getElementById("price").innerHTML = "15.00";
