--- a/deet.html
+++ b/deet.html
@@ -53,7 +53,7 @@ var loc=localStorage.getItem("storageName");
    switch(loc) {
 
     case "ki":
-
+   document.getElementById("myImage").src = "images/drip/kinto.jpg";
    document.getElementById("title").innerHTML = "كينتو";
    document.getElementById("kal").innerHTML = "7";
    document.getElementById("price").innerHTML = "15.00";
