--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@ window.location.href = "deet.html";
             </div>
 
             <div class="col">
-                <div class="card-block px-3">
+                <div class="card-block px-3 scal3">
                     <h5 class="card-title">لاتيه</h5>
            
                   <div id="textbox">
