--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@ window.location.href = "deet.html";
  <div class="card " id="la" onclick="gofor(this.id)">
         <div class="row no-gutters ">
 
-            <div class="col-3 scal3 ">
+            <div class="col-3  ">
             	     	   <picture>
   <source srcset="images/hot/lat.webp" type="image/webp">
   <source srcset="images/hot/lat.jp2" type="image/jp2"> 
@@ -580,7 +580,7 @@ window.location.href = "deet.html";
             </div>
 
             <div class="col">
-                <div class="card-block px-3 scal3">
+                <div class="card-block px-3 ">
                     <h5 class="card-title">لاتيه</h5>
            
                   <div id="textbox">
