--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@ window.location.href = "deet.html";
 
    
  <div class="card " id="la" onclick="gofor(this.id)">
-        <div class="row no-gutters ">
+        <div class="row  ">
 
             <div class="col-3 scal2">
             	     	   <picture>
