--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@ window.location.href = "deet.html";
 
    
  <div class="card " id="la" onclick="gofor(this.id)">
-        <div class="row  ">
+        <div class="row  no-gutters ">
 
             <div class="col-3 scal3">
             	     	   <picture>
@@ -1993,7 +1993,7 @@ window.location.href = "deet.html";
            
             </div>
 
-            <div class="col ">
+            <div class="col">
                 <div class="card-block px-3">
                     <h5 class="card-title">رد فلفت</h5>
            
