--- a/index.html
+++ b/index.html
@@ -2020,7 +2020,9 @@ window.location.href = "deet.html";
 
 <!--Footer-->
 
-
+<footer>
+  <p class="footer">Powered by @Cemicolne</p>
+</footer>
 
 
  </div>
