--- a/deet.html
+++ b/deet.html
@@ -23,7 +23,7 @@
 <div class="card">
 
   <div class="container-fluid scal">
-  <img src="" alt="Denim Jeans" style="width:100%" id="myImage">
+  <img src="" alt="Denim Jeans" style="width:100%" id="myImage" class="card__image loading">
 
    <i class="flaticon-right-arrow-angle btn" onclick="goBack()"></i>
 
