--- a/deet.html
+++ b/deet.html
@@ -22,8 +22,8 @@
 
 <div class="card">
 
-  <div class="container-fluid scal card__image loading">
-  <img src="" alt="Denim Jeans" style="width:100%" id="myImage">
+  <div class="container-fluid scal ">
+  <img src="" alt="Denim Jeans" style="width:100%" id="myImage"  class="card__image loading">
 
    <i class="flaticon-right-arrow-angle btn" onclick="goBack()"></i>
 
