--- a/deet.html
+++ b/deet.html
@@ -22,8 +22,8 @@
 
 <div class="card">
 
-  <div class="container-fluid scal ">
-  <img src="" alt="Denim Jeans" style="width:100%" id="myImage"  class="placeholder-item">
+  <div class="container-fluid scal placeholder-item load">
+  <img src="" alt="Denim Jeans" style="width:100%" id="myImage" >
 
    <i class="flaticon-right-arrow-angle btn" onclick="goBack()"></i>
 
