--- a/deet.html
+++ b/deet.html
@@ -22,7 +22,7 @@
 
 <div class="card">
 
-  <div class="container-fluid scal placeholder-item load">
+  <div class="container-fluid scal  card__image loading">
   <img src="" alt="Denim Jeans" style="width:100%" id="myImage" >
 
    <i class="flaticon-right-arrow-angle btn" onclick="goBack()"></i>
