--- a/deet.html
+++ b/deet.html
@@ -29,9 +29,9 @@
 
 </div>
 
-  <h3 class="card__title loading" id="title"></h3>
+  <h3  id="title"></h3>
 
- <div class="card__description loading"  id="textbox">
+ <div  id="textbox">
                      <p class="alignleft" id="kal"></p>
                      <p class="alignright" id="price"></p>
                          </div>
