--- a/deet.html
+++ b/deet.html
@@ -36,7 +36,7 @@
                      <p class="alignright" id="price"></p>
                          </div>
 
-  <p class="det"></p>
+  <p class="det" id="dt"></p>
 
 
 </div>
@@ -58,6 +58,7 @@ var loc=localStorage.getItem("storageName");
    document.getElementById("title").innerHTML = "كينتو";
    document.getElementById("kal").innerHTML = "7 kal" ;
    document.getElementById("price").innerHTML = "15.00 SR";
+   document.getElementById("dt").innerHTML = "من الأرض الخضراء الممتدة كولومبيا ومن أواسط إقليمها الفسيح کاوكا كان هذا المحصول الكلاسيكي هو محط أنظارنا. فدخل بهیبته محامصنا.. وخرج منها فريداً في مقامه. ان تناولته في كوبر كب فأنت في المكان الذي يليق بك";
    break;
 
    case "vii":
