--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@ window.location.href = "deet.html";
 
 
 
- <div class="card " id="es" onclick="gofor(this.id)">
+ <div class="card " id="sp" onclick="gofor(this.id)">
 
         <div class="row no-gutters ">
 
