--- a/deet.html
+++ b/deet.html
@@ -426,7 +426,7 @@ var loc=localStorage.getItem("storageName");
    case "bdaa":
 
    document.getElementById("myImage").src = "images/bar/da.jpg";
-   document.getElementById("title").innerHTML = "لوح شوكولاتة شوكولاتة داكنة";
+   document.getElementById("title").innerHTML = "لوح شوكولاتة داكنة";
    document.getElementById("kal").innerHTML = "kal";
    document.getElementById("price").innerHTML = "7.00 SR";
    break;
